<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="89dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="86dp"
        android:gravity="top"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/if_you_don_"
        android:layout_width="308dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="145dp"
        android:gravity="top"
        android:text="@string/if_you_don_t_have_an_account_register"
        android:textAppearance="@style/if_you_don_t_have_an_account_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/you_can_sig"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="172dp"
        android:gravity="top"
        android:text="@string/you_can"
        android:textAppearance="@style/you_can"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="172dp"
        android:gravity="top"
        android:text="@string/sign_up_here"
        android:textAppearance="@style/sign_up_here"
        app:layout_constraintStart_toEndOf="@+id/you_can_sig"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/text_field"
        android:layout_width="358dp"
        android:layout_height="74dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="358dp"
            android:layout_height="22dp">

            <TextView
                android:id="@+id/header_labe"
                android:layout_width="42dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/e_mail"
                android:textAppearance="@style/e_mail"
                android:translationY="-1.45sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/input"
            android:layout_width="358dp"
            android:layout_height="46dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input"
            android:clipToOutline="true">

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="326dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_your_email"
                android:lineSpacingExtra="3sp"
                android:textAppearance="@style/enter_your_email"
                android:translationY="-1.45sp"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_field2"
        android:layout_width="358dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="342dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/header2"
            android:layout_width="358dp"
            android:layout_height="22dp">

            <TextView
                android:id="@+id/header_labe2"
                android:layout_width="66dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/password"
                android:textAppearance="@style/password"
                android:translationY="-1.45sp" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/input2"
            android:layout_width="358dp"
            android:layout_height="46dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input"
            android:clipToOutline="true">

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="326dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_your_password"
                android:lineSpacingExtra="3sp"
                android:inputType="textPassword"
                android:textAppearance="@style/enter_your_password"
                android:translationY="-1.45sp"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="20dp"
        android:gravity="right|top"
        android:lineSpacingExtra="3sp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/forgot_password"
        android:translationY="-1.45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <RelativeLayout
        android:id="@+id/group_14"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="488dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_2"
            android:text="@string/sign_in2"
            android:textAppearance="@string/sign_in2"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/or_continue"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="8dp"
        android:gravity="top"
        android:text="@string/or_continue_with"
        android:textAppearance="@style/or_continue_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
